[package]
name = "transactions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal= {version = "1.25", features = ["serde-with-float"]}
serde = {version = "1.0", features = ["derive"]}
csv = {version = "1.1"}


[dev-dependencies]
rust_decimal_macros = {version = "1.25"}
